# haskell-hspec-setup

./: .gitignore  .gitmodules  .travis.yml  README.md  hspec-setup.cabal  package.yaml  stack.yaml
src/: Main.hs
src/System/Directory/: Recursive.hs
src/Test/Hspec/: Setup.hs
test/: SanitySpec.hs
test/System/Directory/: RecursiveSpec.hs
test/Test/Hspec/: SetupSpec.hs
