name:                hspec-setup
version:             0.1.1.1
synopsis:            Add an hspec test-suite in one command
description: @hspec-setup@ is a command-line tool for adding an hspec
             test-suite with minimal work. See the
             <https://github.com/yamadapc/haskell-hspec-setup GitHub README>
             for more information.
homepage:            https://github.com/yamadapc/haskell-hspec-setup
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           Copyright (c) 2015 Pedro Tacla Yamada
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: README.md

tested-with: GHC >= 7.10

source-repository head
  type: git
  location: git://github.com/yamadapc/haskell-hspec-setup

executable hspec-setup
  main-is:             Main.hs
  build-depends:       ansi-wl-pprint
                     , base >=4 && <5
                     , directory
                     , directory-tree
                     , filepath
                     , pretty >= 1.1.2.0
                     , process >= 1.2
                     , projectroot >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: QuickCheck
               , ansi-wl-pprint
               , base
               , hspec
               , pretty >= 1.1.2.0
  hs-source-dirs: test
  default-language: Haskell2010
